Make the tests compile
Add an extra flag to the build script to allow for immediate testing after the
build has completed.

In order to make the tests compile, a small reshuffle of the Receiver internal
struct was required.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,8 @@
 cmake_minimum_required(VERSION 3.9 FATAL_ERROR)
 
 project(channel++)
+set(CMAKE_CXX_STANDARD 17)
 
-# Prepare "Catch" library for other executables
-set(CATCH_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libs/Catch2)
-add_library(Catch INTERFACE)
-target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
+include_directories(include)
 
-# Make test executable
-set(TEST_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/tests/main.cpp)
-add_executable(tests ${TEST_SOURCES})
-target_link_libraries(tests Catch)
+add_subdirectory(tests)
