--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "libs/Catch2"]
 	path = libs/Catch2
 	url = git@github.com:catchorg/Catch2.git
+
+[submodule "libs/llvm"]
+	path = libs/llvm
+	url = git@github.com:llvm-mirror/llvm.git
