--- a/.editorconfig
+++ b/.editorconfig
@@ -9,5 +9,8 @@ insert_final_newline = true
 max_line_length = 80
 trim_trailing_whitespace = true
 
+[Makefile]
+indent_style = tab
+
 [*.py]
 indent_size = 4
